syntax="proto3";
package greet_sum;
import "google/api/annotations.proto";
option go_package="greetsumpb";

message Greeting {
    int32 arg1 = 1;
    int32 arg2 = 2;
}
message GreetRequest{
    Greeting greeting = 1;
}
message GreetResponse {
    int64 res=1;
}

service GreetService {
    rpc Greet(GreetRequest) returns (GreetResponse){
        option (google.api.http) = {
            post:"/v1/echo"
            body:"*"
        };
    };
}

